--- a/style.css
+++ b/style.css
@@ -407,6 +407,18 @@ ul li a:hover:after {
     }
   }
 
+  @media (max-width: 32em) {    
+    .centered {
+        margin-top: -160px;
+        font-size:5vw;
+        
+    }
+    
+    .startbutton {
+        font-size:2.5vw;
+    }
+  }
+
   #leistung {
       font-size: 5vw;
       text-align: center;
