--- a/style.css
+++ b/style.css
@@ -660,4 +660,30 @@ ul li a:hover:after {
     text-transform: uppercase;
     box-shadow: 0 5px 10px rgba(0,0,0,0.12);
   }
+
+  .profil {
+    width: 50%;
+    height: 50%;
+    margin-left: 60px;
+    border-radius:  50%;
+    transition: ease-in-out 0.2s;
+  }
+
+  .socialIcons img {
+    padding: 10px;
+    margin-left: 20px;
+  }
+
+  h3{
+    text-align: center;
+  }
+  h4{
+    text-align: center;
+  }
+  .Icon{
+    transition: ease-out .3s;
+  }
+  .Icon:hover{
+    transform: scale(1.2);
+  }
   
